# simular

./: .clippy.toml  .dockerignore  .dvcignore  .editorconfig  .gitattributes  .gitignore  .pmat-baseline.json  .pmat-gates.toml  .pmat-metrics.toml  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DATASHEET.md  Dockerfile  GOVERNANCE.md  HYPOTHESIS.md  Makefile  README.md  SECURITY.md  build.rs  demo.tape  docker-compose.yml  dvc.yaml  flake.nix  mise.toml  mutants.toml  roadmap.yaml  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.dvc/: config
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  nightly.yml
.pmat/: baseline.json  context.db  project.toml
.pmat-work/PMAT-006/: contract.json
.pmat/metrics/: dependencies.json
.pv/: lint-previous.json
benches/: README.md  simulation_benchmarks.rs
book/: book.toml
book/src/: SUMMARY.md  api_reference.md  core_concepts.md  domain_ml.md  domain_monte_carlo.md  domain_optimization.md  domain_physics.md  engine_jidoka.md  engine_replay.md  engine_rng.md  introduction.md  orbit_demo.md  quick_start.md  rendering_svg.md  scenario_climate.md  scenario_epidemic.md  scenario_pendulum.md  scenario_portfolio.md  scenario_rocket.md  scenario_satellite.md  tsp_grasp_demo.md
contracts/: checkpoint-v1.yaml  gradient-v1.yaml  loss-functions-v1.yaml
contracts/.pv/cache/lint/: 096dd027c3e0706d.json  1cc68ff0175d1d36.json  3ea64e59f6abdfc1.json  (+7 more)
data/raw/: california_cities.yaml  california_cities.yaml.dvc
docs/: POWER_ANALYSIS.md  PRE_REGISTRATION.md  REPRODUCIBILITY.md  SEEDS.md  STATISTICS.md  effect-sizes.md
docs/adr/: 0001-edd-methodology.md  0002-symplectic-integrators.md  0003-zero-javascript-wasm.md  0004-toyota-production-system.md  README.md
docs/book/edd/: 00-introduction.md  01-operations-equations.md  02-equation-model-cards.md  03-experiment-specification.md  04-falsification.md  05-tps-validation.md  SUMMARY.md
docs/data/: DATACARD.md  README.md
docs/emc/ml/: gaussian_process.emc.yaml  linear_regression.emc.yaml  logistic_regression.emc.yaml
docs/emc/operations/: batch_sizing_epei.emc.yaml  bullwhip_effect.emc.yaml  heijunka_leveling.emc.yaml  kingmans_formula.emc.yaml  littles_law.emc.yaml  push_pull_conwip.emc.yaml  square_root_law.emc.yaml
docs/emc/optimization/: bayesian_optimization.emc.yaml  cma_es.emc.yaml  gradient_descent.emc.yaml  tsp_grasp.emc.yaml
docs/emc/physics/: harmonic_oscillator.emc.yaml  kepler_two_body.emc.yaml  n_body_gravitational.emc.yaml  newtonian_particle.emc.yaml  pendulum_double.emc.yaml  pendulum_simple.emc.yaml  rigid_body_euler.emc.yaml  wave_equation_1d.emc.yaml
docs/emc/queueing/: gg1_queue.emc.yaml  jackson_network.emc.yaml  mg1_queue.emc.yaml  mm1_queue.emc.yaml
docs/emc/statistical/: brownian_motion.emc.yaml  importance_sampling.emc.yaml  markov_chain.emc.yaml  monte_carlo_integration.emc.yaml
docs/qa/: 100point-qa-checklist-nasa-quality.md
docs/roadmaps/: roadmap.yaml  roadmap.yaml.bak
docs/schemas/: emc-v1.0.json  experiment-v1.0.json
docs/specifications/: EDD-equation-driven-development-spec.md  EDD-spec-unified.md  cov-001-spec.md  demo-architecture-v2.md  simple-or-example.md  simular-orbit-demo-project-spec.md  unified-rewrite-demos-jugar-probar-first.md  unified-simulation-engine-spec.md
examples/: contract_pipeline_demo.rs  edd_falsification.rs  edd_model_card.rs  edd_operations.rs  edd_tps_validation.rs  edd_yaml_loader.rs  gui_coverage_demo.rs  jidoka_guards.rs  monte_carlo.rs  optimization.rs  orbit_demo.rs  physics_simulation.rs  reproducibility.rs  tsp_grasp_demo.rs
examples/experiments/: bay_area_tsp.yaml  bayesian_optimization.yaml  harmonic_oscillator.yaml  kepler_two_body.yaml  littles_law_validation.yaml  monte_carlo_pi.yaml  orbit_earth_sun.yaml
examples/experiments/tps/: tc10_kanban_vs_dbr.yaml  tc1_push_vs_pull.yaml  tc2_batch_size_reduction.yaml  tc3_littles_law_stochastic.yaml  tc4_heijunka_bullwhip.yaml  tc5_smed_oee.yaml  tc6_shojinka.yaml  tc7_cell_layout.yaml  tc8_kingmans_curve.yaml  tc9_square_root_law.yaml
metrics/: monte_carlo_benchmark.json  orbit_benchmark.json  tsp_benchmark.json
params/: default.yaml
proptest-regressions/domains/: monte_carlo.txt  optimization.txt  physics.txt
proptest-regressions/engine/: clock.txt
schemas/: demo.schema.json  emc.schema.json  experiment.schema.json
scripts/: compare_benchmarks.py
src/: discovery.rs  error.rs  generated_contracts.rs  lib.rs  main.rs
src/cli/: args.rs  commands.rs  mod.rs  output.rs  schema.rs  tests.rs
src/config/: mod.rs
src/demos/: engine.rs  harmonic_oscillator.rs  kepler_orbit.rs  kingmans_hockey.rs  littles_law_factory.rs  mod.rs  monte_carlo_pi.rs  orbit_engine.rs  orbit_wasm_app.rs  tsp_engine.rs  tsp_grasp.rs  tsp_instance.rs  tsp_wasm_app.rs
src/demos/tsp_grasp/: mod.rs  quality_tests.rs  tests.rs
src/domains/: ml.rs  mod.rs  monte_carlo.rs  optimization.rs  physics.rs
src/domains/ml/: jidoka.rs  mod.rs  multi_turn.rs  prediction.rs  tests.rs
src/edd/: audit.rs  equation.rs  experiment.rs  falsifiable.rs  gui_coverage.rs  loader.rs  mod.rs  model_card.rs  operations.rs  prover.rs  report.rs  runner.rs  style.rs  tps.rs  traits.rs  v2.rs  validation.rs
src/engine/: clock.rs  jidoka.rs  mod.rs  rng.rs  scheduler.rs  state.rs
src/falsification/: mod.rs
src/orbit/: heijunka.rs  jidoka.rs  metamorphic.rs  mod.rs  physics.rs  render.rs  scenarios.rs  units.rs  wasm.rs
src/renderers/: keyframes.rs  mod.rs  svg.rs  tui.rs  wasm.rs
src/replay/: mod.rs
src/scenarios/: bouncing_balls.rs  climate.rs  epidemic.rs  mod.rs  pendulum.rs  portfolio.rs  rocket.rs  satellite.rs
src/tui/: compute_blocks.rs  mod.rs  orbit_app.rs  tests.rs  tsp_app.rs
src/visualization/: mod.rs  tui.rs  web.rs
tests/: contract_traits.rs  orbit_e2e.rs  probar_compute_blocks.rs  probar_demos.rs  probar_orbit.rs  probar_pixel_coverage.rs  probar_tsp.rs  qa_reproducibility.rs
web/: index.html  tsp-minimal.html  tsp.html
